# stt_worker

./: .coverage  Dockerfile  main.py  pyproject.toml
.github/workflows/: docker.yml
app/: asr_client.py  config.py  notion.py  telegram.py  transcriber.py
app/models/: job.py
tests/: conftest.py  test_asr_client.py  test_process_job.py
tests/unit/: conftest.py  test_asr_client.py  test_notion.py  test_run_worker.py  test_telegram.py  test_transcriber.py  test_transcriber_edges.py  test_transcriber_helpers.py  test_transcriber_more.py
