[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.1.0",
    "aiosqlite>=0.21.0",
    "anyio>=4.11.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "notion-client>=2.5.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "redis>=6.4.0",
    "respx>=0.22.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250913",
]
